--- a/ecom/store/templates/base.html
+++ b/ecom/store/templates/base.html
@@ -15,12 +15,9 @@
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         <link href="{% static 'css/productstyle.css' %}" rel="stylesheet" />
         <link rel="icon" href="{% static 'assets/favicon.ico' %}" type="image/x-icon">
-        
     </head>
-    <body>
-        
+    <body style="display: flex; flex-direction: column; min-height: 100vh; margin: 0;">
         {% include "navbar.html" %}
-         
         
         <!-- Messages -->
         {% if messages %}
@@ -31,24 +28,23 @@
                 </div>
             {% endfor %}
         {% endif %}
-
-        <!-- Main Content -->
-        {% block content %}
         
-        {% endblock %}
-
+        <!-- Main Content -->
+        <main style="flex: 1;">
+            {% block content %}
+            {% endblock %}
+        </main>
+        
         <!-- Footer -->
-        <footer class="py-5 bg-dark">
+        <footer class="py-5 bg-dark" style="position: relative; bottom: 0; width: 100%; height: 100px;">
             <div class="container">
                 <p class="m-0 text-center text-white">Copyright &copy; Phoneix.com 2024</p>
             </div>
         </footer>
+        
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
-
-
-        
     </body>
 </html>
