--- a/ecom/store/templates/home.html
+++ b/ecom/store/templates/home.html
@@ -11,6 +11,7 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
+                    
                      
 
                     
@@ -61,7 +62,25 @@
             </div>
         </header>
 
-
+        <div class="container py-5">
+            
+            {% if available_coupons %}
+ 
+                <div class="d-flex flex-wrap">
+                    {% for coupon in  available_coupons%}
+                        <div class="badge bg-primary text-white m-2 p-3" style="font-size: 1.2em; border-radius: 10px;">
+                            <h5 class="mb-1">{{ coupon.code }}</h5>
+                            <p class="mb-0">
+                                <strong>{{ coupon.discount_percent }}% OFF</strong><br>
+                                Valid Until: {{coupon.end_date|date:"Y-m-d" }}
+                            </p>
+                        </div>
+                    {% endfor %}
+                </div>
+         
+            {% endif %}
+        </div>
+        
 
         <!-- Section-->
         <section class="py-5">
