--- a/ecom/store/templates/navbar.html
+++ b/ecom/store/templates/navbar.html
@@ -49,7 +49,15 @@
                             </span>
                         </a>
                     </div>
+                   <div class="d-flex">
+                    <a href="{% url 'wishlist' %}" class="btn btn-outline-dark">
+                        <!-- Wishlist Icon -->
+                        <i class="bi bi-heart me-1"></i>
+                        Wishlist
+                    </a>
                 </div>
+
+            </div>
             </nav>
             {% endif %}
 
