--- a/ecom/store_manager/templates/variant_list.html
+++ b/ecom/store_manager/templates/variant_list.html
@@ -15,7 +15,7 @@
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">Store Manager Page</h1>
-            <p class="lead fw-normal text-white-50 mb-0">User List</p>
+            <p class="lead fw-normal text-white-50 mb-0">Variant List</p>
         </div>
     </div>
 </header> 
@@ -24,11 +24,18 @@
   form{
       width: 500px;
       height: auto;
-      padding: 20px 20px 20px 20px;
+      
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       margin: 50px auto;
-      border-radius: 10px;
+    
   }
+  form {
+    display: inline; /* Keeps the form inline with other elements */
+    margin: 0; /* Remove any margin if needed */
+    padding: 0; /* Remove padding if needed */
+    border: none; /* No border */
+    background: none; /* No background */
+}
   form p{
       text-align: center;
   }
@@ -148,9 +155,20 @@
                 <a href="{% url 'edit_variant' variant.id %}">
                     <button type="button" class="edit-btn">Edit</button>
                
-                    <a href="{% url 'delete_variant' variant.id %}" onclick="return confirm('Are you sure you want to delete this variant?');">Delete</a>
+                    {% comment %} <a href="{% url 'delete_variant' variant.id %}" onclick="return confirm('Are you sure you want to delete this variant?');">Delete</a> {% endcomment %}
+                     
+                        
+                    
 
                 </a>
+            <td>
+                <form method="post" action="{% url 'delete_variant' variant.id %}" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this variant?');">
+                        Delete
+                    </button>
+                </form>
+            </td>
             </td>
         </tr>
         {% endfor %}
