--- a/ecom/store_manager/templates/dashboard.html
+++ b/ecom/store_manager/templates/dashboard.html
@@ -125,7 +125,21 @@
           </div>
         </div>
       </div>
-    
+     <!-- Total Products Card -->
+     <div class="col-md-4">
+      <div class="card text-center">
+        <div class="card-header">
+           
+        <a href="{% url 'generate_sales_report' %}" class="text-link">Sales Report</a>
+        
+
+        </div>
+        <div class="card-body">
+          <h3>{{ total_orders }}</h3>
+        </div>
+      </div>
+    </div>
+  
      
    
     <div class="col-md-4">
